--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="profile-section">
 
                      <figure class="profile-pic">
-                        <img src="/images/Profile.jpg" alt="Myself">
+                        <img src="images/Profile.jpg" alt="Myself">
                     </figure>
 
                 
@@ -96,7 +96,7 @@
 
                         <div class="fav-content">
                             <figure class="pic">
-                                <img src="/images/cup-of-joe.jpeg" alt="COJ">
+                                <img src="images/cup-of-joe.jpeg" alt="COJ">
                             </figure>
 
                             <div class="details">
@@ -110,7 +110,7 @@
 
                         <div class="fav-content">
                             <figure class="pic">
-                                <img src="/images/pork-barbecue-from-golidlocks.jpg" alt="BBQ">
+                                <img src="images/pork-barbecue-from-golidlocks.jpg" alt="BBQ">
                             </figure>
 
                             <div class="details">
@@ -125,7 +125,7 @@
 
                             <div class="fav-content">
                                 <figure class="pic">
-                                    <img src="/images/Dahican-Beach.png" alt="Beach">
+                                    <img src="images/Dahican-Beach.png" alt="Beach">
                                 </figure>
 
                                 <div class="details">
@@ -139,7 +139,7 @@
 
                              <div class="fav-content">
                                 <figure class="pic">
-                                    <img src="/images/ford-mustang.jpg" alt="Car">
+                                    <img src="images/ford-mustang.jpg" alt="Car">
                                 </figure>
 
                                 <div class="details">
